Make low percentage bus stops better visible on map

--- a/d2d/static/css/map.css
+++ b/d2d/static/css/map.css
@@ -71,7 +71,7 @@ form label
   height: 1rem;
   width: 50%;
   display: inline-block;
-  background: linear-gradient(to right, white, lime, green);
+  background: linear-gradient(to right, lightblue, lime, green);
 }
 .route
 {
